# meal-tools-backend

./: alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 09c57c9d67b3_update_tag_2.py  1dae51f22bb2_update_tag.py  2402cd81dacf_initial_migration.py  afe80fda900d_add_tags.py
scripts/: init_db.sh  test.sh
src/app/: init_excel_data.py  main.py
src/app/core/: config.py
src/app/crud/: __init__.py  base.py  crud_canteen.py  crud_food.py  crud_tag.py  crud_weigh.py
src/app/db/: init_db.py  session.py  utils.py
src/app/models/: __init__.py  assoc.py  base.py  canteen.py  food.py  tag.py  weigh.py
src/app/routers/: api.py  deps.py
src/app/routers/endpoints/: canteen.py  food.py  tag.py  upload.py  weigh.py
src/app/schemas/: __init__.py  base.py  canteen.py  food.py  page.py  tag.py  weigh.py
src/app/tests/: conftest.py
src/app/tests/crud/: test_food.py
src/app/utils/: futils.py  make_annotations.py  sqlutils.py  statutils.py
