[tool.poetry]
name = "meal-tools-backend"
version = "0.1.0"
description = "Meal tools"
authors = ["QuadnucYard <2380433991@qq.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
aiosqlite = "^0.19.0"
alembic = "^1.13.1"
fastapi = ">=0.111.0"
fastapi-pagination = "^0.12.14"
more-itertools = "^10.2.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
SQLAlchemy = "^2.0.23"

[tool.poetry.group.dev.dependencies]
httpx = "^0.26.0"
mypy = "^1.10.0"
openpyxl = "^3.1.2"
pandas = "^2.2.1"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.5"
ruff = "^0.4.2"
fastapi-cli = "^0.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.mypy]
# strict = true
check_untyped_defs = false

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
line-length = 120

[tool.ruff.lint]
ignore = ["B008", "E711", "E712", "F403", "F405", "E402"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-third-party = ["alembic", "sqlalchemy", "pydantic", "fastapi"]
